# FastAPI_test

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  main.py  pyproject.toml  setup.cfg  test.db
alembic/: env.py
alembic/versions/: 169e8d71f0fa_user_email_is_not_nullable.py  18e97a8f5a65_edit_user.py  259a90f5cdc1_create_table.py  30ce576f4e53_added_email_to_user_without_nullable.py  4ff630764209_create_table.py  727bd23a2343_create_table.py  8965c5438911_edit_user.py  9131818ac944_add_password_to_user.py  ab6105190495_transition_to_sqlite.py  ba4e851a7f9b_transition_to_postgresql.py  d23c58946ffe_create_account_table.py  dbbe47d2fed0_edit_user.py
app/: dependencies.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: auth.py  user.py
app/core/: auth.py  security.py
app/crud/: base.py  user.py
app/db/: base_class.py
app/models/: user.py
app/schemas/: __init__.py  token.py  user.py
tests/: app_test.py
