[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["igoruxa007 <igoruxa007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["statndart"], version = "^0.115.6"}
uvicorn = "^0.34.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
