[tool.poetry]
name = "FastAPI_test"
version = "0.1.0"
description = ""
package-mode = false
authors = ["igoruxa007 <igoruxa007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.34.0"
pre-commit = "^4.0.1"
pydantic = "^2.10.5"
sqlalchemy = "^2.0.37"
fastapi = "^0.115.6"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
