[tool.poetry]
name = "FastAPI_test"
version = "0.1.0"
description = ""
package-mode = false
authors = ["igoruxa007 <igoruxa007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.34.0"
pre-commit = "^4.0.1"
pydantic = {extras = ["email"], version = "^2.10.6"}
sqlalchemy = "^2.0.37"
fastapi = "^0.115.6"
psycopg2-binary = "^2.9.10"
alembic = "^1.14.0"
flake8 = "^7.1.1"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
passlib = "^1.7.4"
bcrypt = "^4.2.1"
python-jose = "^3.3.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
